--- a/Web/Web.config
+++ b/Web/Web.config
@@ -162,7 +162,16 @@
       </authorization>
     </system.web>
   </location>
+  <!-- This section gives the unauthenticated user access to the UseExists page -->
   <location path="Pages/UserExists.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <!-- This section gives the unauthenticated user access to the UseExists page -->
+  <location path="Pages/Product/ProductSearch.aspx">
     <system.web>
       <authorization>
         <allow users="*" />
