Añadida vista de detalles de producto básica

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -170,8 +170,16 @@
       </authorization>
     </system.web>
   </location>
-  <!-- This section gives the unauthenticated user access to the UseExists page -->
+  <!-- This section gives the unauthenticated user access to the ProductSearch page -->
   <location path="Pages/Product/ProductSearch.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <!-- This section gives the unauthenticated user access to the ProductDetails page -->
+  <location path="Pages/Product/ProductDetails.aspx">
     <system.web>
       <authorization>
         <allow users="*" />
