--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -105,6 +105,7 @@
     <Content Include="Global.asax" />
     <Content Include="Pages\Errors\InternalError.aspx" />
     <Content Include="Pages\MainPage.aspx" />
+    <Content Include="Pages\Product\ModifyProduct.aspx" />
     <Content Include="Pages\Product\ProductComments.aspx" />
     <Content Include="Pages\Product\ProductDetails.aspx" />
     <Content Include="Pages\Product\ProductSearch.aspx" />
@@ -170,6 +171,13 @@
     </Compile>
     <Compile Include="Pages\MainPage.aspx.designer.cs">
       <DependentUpon>MainPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Product\ModifyProduct.aspx.cs">
+      <DependentUpon>ModifyProduct.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Product\ModifyProduct.aspx.designer.cs">
+      <DependentUpon>ModifyProduct.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\Product\ProductComments.aspx.cs">
       <DependentUpon>ProductComments.aspx</DependentUpon>
@@ -502,11 +510,20 @@
   <ItemGroup>
     <Content Include="Pages\Product\App_LocalResources\RegisterTag.aspx.es.resx" />
   </ItemGroup>
-   <ItemGroup>
+  <ItemGroup>
     <Content Include="Pages\Product\App_LocalResources\ProductSearch.aspx.es.resx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Pages\Product\App_LocalResources\ProductSearch.aspx.gl.resx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Pages\Product\App_LocalResources\ModifyProduct.aspx.resx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Pages\Product\App_LocalResources\ModifyProduct.aspx.gl.resx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Pages\Product\App_LocalResources\ModifyProduct.aspx.es.resx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
