--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -105,6 +105,7 @@
     <Content Include="Global.asax" />
     <Content Include="Pages\Errors\InternalError.aspx" />
     <Content Include="Pages\MainPage.aspx" />
+    <Content Include="Pages\Product\AddComment.aspx" />
     <Content Include="Pages\Product\ModifyProduct.aspx" />
     <Content Include="Pages\Product\ProductComments.aspx" />
     <Content Include="Pages\Product\ProductDetails.aspx" />
@@ -171,6 +172,13 @@
     </Compile>
     <Compile Include="Pages\MainPage.aspx.designer.cs">
       <DependentUpon>MainPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Product\AddComment.aspx.cs">
+      <DependentUpon>AddComment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Product\AddComment.aspx.designer.cs">
+      <DependentUpon>AddComment.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\Product\ModifyProduct.aspx.cs">
       <DependentUpon>ModifyProduct.aspx</DependentUpon>
@@ -524,8 +532,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Pages\Product\App_LocalResources\ModifyProduct.aspx.es.resx" />
-   </ItemGroup>
-   <ItemGroup>
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Pages\Product\App_LocalResources\ProductComments.aspx.resx" />
   </ItemGroup>
   <ItemGroup>
