--- a/Web/Web.config
+++ b/Web/Web.config
@@ -175,6 +175,14 @@
       </authorization>
     </system.web>
   </location>
+  <!-- This section gives the unauthenticated user access to the AddProductCart page -->
+  <location path="Pages/Shopping/AddProductCart.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
   <!-- This section gives the unauthenticated user access to the ProductDetails page -->
   <location path="Pages/Product/ProductDetails.aspx">
     <system.web>
