--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -106,6 +106,7 @@
     <Content Include="Pages\Errors\InternalError.aspx" />
     <Content Include="Pages\MainPage.aspx" />
     <Content Include="Pages\Product\AddComment.aspx" />
+    <Content Include="Pages\Product\ModifyComment.aspx" />
     <Content Include="Pages\Product\ModifyProduct.aspx" />
     <Content Include="Pages\Product\ProductComments.aspx" />
     <Content Include="Pages\Product\ProductDetails.aspx" />
@@ -180,6 +181,13 @@
     </Compile>
     <Compile Include="Pages\Product\AddComment.aspx.designer.cs">
       <DependentUpon>AddComment.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Product\ModifyComment.aspx.cs">
+      <DependentUpon>ModifyComment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Product\ModifyComment.aspx.designer.cs">
+      <DependentUpon>ModifyComment.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\Product\ModifyProduct.aspx.cs">
       <DependentUpon>ModifyProduct.aspx</DependentUpon>
@@ -567,6 +575,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Pages\Shopping\App_LocalResources\AddProductCart.aspx.es.resx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Pages\Product\App_LocalResources\ModifyComment.aspx.resx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Pages\Product\App_LocalResources\ModifyComment.aspx.es.resx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Pages\Product\App_LocalResources\ModifyComment.aspx.gl.resx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
