--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -18,10 +18,8 @@
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
-    <IISExpressAnonymousAuthentication>
-    </IISExpressAnonymousAuthentication>
-    <IISExpressWindowsAuthentication>
-    </IISExpressWindowsAuthentication>
+    <IISExpressAnonymousAuthentication>enabled</IISExpressAnonymousAuthentication>
+    <IISExpressWindowsAuthentication>disabled</IISExpressWindowsAuthentication>
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
@@ -114,7 +112,6 @@
     <Content Include="Pages\Product\ProductDetails.aspx" />
     <Content Include="Pages\Product\ProductSearch.aspx" />
     <Content Include="Pages\Product\RegisterTag.aspx" />
-    <Content Include="Pages\Shopping\AddProductCart.aspx" />
     <Content Include="Pages\Shopping\Buy.aspx" />
     <Content Include="Pages\Shopping\DeliveryDetails.aspx" />
     <Content Include="Pages\Shopping\ListDeliveries.aspx" />
@@ -225,13 +222,6 @@
     </Compile>
     <Compile Include="Pages\Product\RegisterTag.aspx.designer.cs">
       <DependentUpon>RegisterTag.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\Shopping\AddProductCart.aspx.cs">
-      <DependentUpon>AddProductCart.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Pages\Shopping\AddProductCart.aspx.designer.cs">
-      <DependentUpon>AddProductCart.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\Shopping\Buy.aspx.cs">
       <DependentUpon>Buy.aspx</DependentUpon>
