--- a/Web/Web.config
+++ b/Web/Web.config
@@ -15,7 +15,7 @@
   <applicationSettings>
     <Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
       <setting name="PracticaMaD_defaultCount" serializeAs="String">
-        <value>4</value>
+        <value>20</value>
       </setting>
     </Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
   </applicationSettings>
@@ -68,7 +68,7 @@
                                         allows it
          -->
     <authentication mode="Forms">
-      <forms name=".ASPXAUTH" loginUrl="~/Pages/User/Authentication.aspx" timeout="30" path="/" defaultUrl="~/Pages/MainPage.aspx" cookieless="AutoDetect" />
+      <forms name=".ASPXAUTH" loginUrl="~/Pages/User/Authentication.aspx" timeout="30" path="/" defaultUrl="~/Pages/MainPage.aspx" cookieless="UseUri" />
     </authentication>
     <!-- Session will not use cookies if the client does not allow it.
 
