--- a/Web/Web.config
+++ b/Web/Web.config
@@ -78,7 +78,7 @@
             "AutoDetect"            ==> Cookies will be used if client browsers
                                         allows it
     -->
-    <sessionState cookieless="UseCookies" timeout="30" />
+    <sessionState cookieless="AutoDetect" timeout="30" />
     <!-- The <customErrors> section enables configuration of what to do
          if/when an unhandled error occurs during the execution of a request.
 
